--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ Hello, I'm 赫稲. This site has various reference sites and a template site. No
 </div>
 <div id="footer">
 <fixing>
-<!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d1275_f10_022/65870b3067b35/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0" alt=""><img src="http://www.rays-counter.com/images/counter_04.gif" border="0"><img src="http://www.rays-counter.com/images/counter_05.gif" border="0" ></td></tr></table><!--ここまで-->
+<!-- SEKKAKU-COOUNT ここから --><script src="//scnt.sekkaku.net/cnt.cgi?id=S1714239607&amp;mode=all&amp;color=000000&amp;size=14&amp;comma=on&amp;column=0&amp;mouse=to"></script><noscript><a href="https://count.sekkaku.net/" target="_blank"><img src="//scnt.sekkaku.net/cnt.cgi?id=S1714239607&amp;script=no&amp;guid=on" alt="カウンター" border="0" /></a></noscript><!-- SEKKAKU-COOUNT ここまで -->
+	
 </fixing>
 </div></div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
