--- a/Download.html
+++ b/Download.html
@@ -11,12 +11,30 @@
 <link rel="stylesheet" type="text/css" href="css/animation_0.css"> </head>
 <!--[if lt IE 9]>
 <![endif]-->
+    <style>
+    /* ローダーのスタイル */
+    .loader {
+      font-size: 24px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      animation: bounce 0.5s infinite alternate; /* 上下に飛び跳ねるアニメーションを適用 */
+    }
+
+    /* 上下に飛び跳ねるアニメーション */
+    @keyframes bounce {
+      0% { transform: translate(-50%, -50%) translateY(0); }
+      100% { transform: translate(-50%, -50%) translateY(-20px); }
+    }
+  </style>
 </head>
 
 
 
 <body>
-
+  <!-- Loader要素 -->
+  <div class="loader">Loading...</div>
 <header>
 <nav id="menubar">
 <ul>
