--- a/Download.html
+++ b/Download.html
@@ -8,7 +8,8 @@
 <meta name="description" content="ダウンロードサイトです。ここでは私が作成した配布物をダウンロード出来ます。">
 <meta name="keywords" content="Download, 赫稲">
 <link rel="stylesheet" href="css/style_2.css">
-<link rel="stylesheet" type="text/css" href="css/animation_0.css"> </head>
+<link rel="stylesheet" type="text/css" href="css/animation_0.css"> 
+<script src="js/    <script src="your-script.js"></script>"></script>
 <!--[if lt IE 9]>
 <![endif]-->
     <style>
