--- a/Download.html
+++ b/Download.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="Download, 赫稲">
 <link rel="stylesheet" href="css/style_2.css">
 <link rel="stylesheet" type="text/css" href="css/animation_0.css"> 
-<script src="js/    <script src="your-script.js"></script>"></script>
+<script src="js/animation_0.js"></script>
 <!--[if lt IE 9]>
 <![endif]-->
     <style>
