--- a/Download.html
+++ b/Download.html
@@ -38,8 +38,6 @@
 
 
 <body>
-  <!-- Loader要素 -->
-  <div class="loader">Loading...</div>
 <header>
 <nav id="menubar">
 <ul>
@@ -55,7 +53,11 @@
 
 <table class="ta1">
 <tr>
-<th colspan="2" class="tamidashi">アドオン一覧(2023～)</th>
+<th colspan="2" class="tamidashi">
+    <div class="container">
+        <div class="text">アドオン一覧(2023～)</div>
+    </div>
+</th>
 </tr>
 <tr>
 <th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1</a></th>
