--- a/Download.html
+++ b/Download.html
@@ -47,11 +47,11 @@
 
 <table class="ta1">
 <tr>
-<th colspan="2" class="tamidashi">
+<th colspan="2" class="tamidashi"><th>
   <div class="container">
         <div class="text">アドオン一覧(2023～)</div>
   </div>
-</th>
+</th><th>
 </tr>
 <tr>
 <th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1</a></th>
