--- a/Download.html
+++ b/Download.html
@@ -47,9 +47,17 @@
 
 <table class="ta1">
 <tr>
-<th colspan="2" class="tamidashi"><th>
+<th colspan="2" class="tamidashi">
   <div class="container">
         <div class="text">アドオン一覧(2023～)</div>
+  </div>
+</th>
+</tr>
+    
+<tr>
+<th colspan="2" class="tamidashi">
+  <div class="container">
+        <div class="text">Download一覧(2023～)</div><th>
   </div>
 </th>
 </tr>
