--- a/Download.html
+++ b/Download.html
@@ -55,9 +55,9 @@
 </tr>
     
 <tr>
-<th colspan="2" class="tamidashi">
+<th>
   <div class="container">
-        <div class="text">Download一覧(2023～)</div><th>
+        <div class="text">Download一覧(2023～)</div>
   </div>
 </th>
 </tr>
