--- a/Download.html
+++ b/Download.html
@@ -51,18 +51,9 @@
   <div class="container">
         <div class="text">アドオン一覧(2023～)</div>
   </div>
-</th>
+</th><th> <div class="text">Download一覧(2023～)</div></th>
 </tr>
     
-<tr>
-<th>
-  <div class="container">
-<th>
-        <div class="text">Download一覧(2023～)</div>
-</th>
-  </div>
-</th>
-</tr>
 <tr>
 <th><a href="./addon/Aaa/touhou_Little.html" target="_blank">東方リトルメイド再現アドオン.V1</a></th>
 <td>東方リトルメイドMODを統合版で再現したアドオンです。しかし遊べる程度なので完成度は低いV.2からなにか来るかも</td>
