--- a/Download.html
+++ b/Download.html
@@ -26,6 +26,7 @@
     0% { transform: translateY(0); }
     100% { transform: translateY(-20px); }
   }
+  .block-ok{background: #000000;}
   </style>
 </head>
 
