--- a/Download.html
+++ b/Download.html
@@ -52,7 +52,7 @@
   <div class="container">
         <div class="text">アドオン一覧(2023～)</div>
   </div>
-</th><th> <div class="text">Download一覧(2023～)</div></th>
+</th><e class="block-ok"><th><div class="text">Download一覧(2023～)</div></th></e>
 </tr>
     
 <tr>
