--- a/Download.html
+++ b/Download.html
@@ -26,7 +26,7 @@
     0% { transform: translateY(0); }
     100% { transform: translateY(-20px); }
   }
-  blockok{background: #000000;}
+  blockok{background: #000000;	color: #ffffff;	/*全体の文字色*/}
   </style>
 </head>
 
