--- a/Download.html
+++ b/Download.html
@@ -27,6 +27,7 @@
     100% { transform: translateY(-20px); }
   }
   blockok{background: #000000;	color: #ffffff;	/*全体の文字色*/}
+  .blockok{background: #000000;	color: #ffffff;	/*全体の文字色*/}
   </style>
 </head>
 
@@ -52,7 +53,7 @@
   <div class="container">
         <div class="text">アドオン一覧(2023～)</div>
   </div>
-</th><blockok><th><div class="text"><blockok>Download一覧(2023～)</blockok></div></th></blockok>
+</th><blockok><th class="blockok"><div class="text" class="blockok"><blockok>Download一覧(2023～)</blockok></div></th></blockok>
 </tr>
     
 <tr>
