--- a/Download.html
+++ b/Download.html
@@ -49,14 +49,17 @@
 
 /* スタイリング */
 ul {
+    
+    text-align: center; /* テキストを中央に配置 */
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
 
 li {
+    text-align: center; /* テキストを中央に配置 */
     margin-bottom: 10px;
-    background-color: #f0f0f0;
+  //  background-color: #f0f0f0;
     padding: 10px;
     border-radius: 5px;
 }
