--- a/Download.html
+++ b/Download.html
@@ -13,6 +13,16 @@
 <!--[if lt IE 9]>
 <![endif]-->
     <style>
+        @font-face {
+    font-family: 'HandwritingFont';
+    src: url('./Font/omakebold.ttf') format('truetype'); /* フォントファイルのパスを指定 */
+    /* 他のフォント形式に対応する場合は、ここに追加します */
+}
+
+* {
+    font-family: 'HandwritingFont', sans-serif; /* 全体のテキストに手書きフォントを適用 */
+}
+
   .container {
     text-align: center; /* テキストを中央に配置 */
   }
