--- a/Download.html
+++ b/Download.html
@@ -21,6 +21,7 @@
 
 * {
     font-weight: bold;
+    background: #7117c4;
     font-family: 'HandwritingFont', sans-serif; /* 全体のテキストに手書きフォントを適用 */
 }
 
