--- a/Download.html
+++ b/Download.html
@@ -13,6 +13,21 @@
 <!--[if lt IE 9]>
 <![endif]-->
     <style>
+        footer {
+	clear: both;
+	text-align: center;	/*文字をセンタリング*/
+	padding: 20px 0px;		/*headerの高さ*/
+	background: #7117c4;		/*左から、上下、左右への余白*/
+}
+footer a {
+    background: #7117c4;		
+	text-decoration: none;
+	border: none;
+}
+footer .pr {
+    background: #7117c4;		
+	display: block;
+}
         @font-face {
     font-family: 'HandwritingFont';
     src: url('./Font/omakebold.ttf') format('truetype'); /* フォントファイルのパスを指定 */
