--- a/Download.html
+++ b/Download.html
@@ -13,6 +13,10 @@
 <!--[if lt IE 9]>
 <![endif]-->
     <style>
+	    section {
+    margin-top: 10px;
+}
+
         footer {
 	clear: both;
 	text-align: center;	/*文字をセンタリング*/
