--- a/Download.html
+++ b/Download.html
@@ -13,9 +13,11 @@
 <!--[if lt IE 9]>
 <![endif]-->
     <style>
-	    section {
+  section {
     margin-top: 10px;
+    margin-bottom: -10px; /* 下側の余白を20pxに設定 */
 }
+
 
         footer {
 	clear: both;
