--- a/Download.html
+++ b/Download.html
@@ -132,13 +132,13 @@ li {
 </tr>
 <tr><th><a href="./addon/touhou/Komeiji_Koishi.html" target="_blank">Touhou Komeiji Koishi GUI_V1.5.mcpack</a></th>
 <td>Touhou Komeiji Koishi GUI V1.5</td>
-<th><a href="./addon/touhou/Touhou_Komeiji_Koishi_GUI.mcpack" download="Touhou_Komeiji_Koishi_GUI_V1.5.mcpack"><input type="button" id="countButton2" value="download">:<count2></count2></a></th>
+<th><div id="release-info2" class="release-info"></div></th>
 </tr>
 
 <tr>
 <th><a href="./addon/skin/skin.html" target="_blank">Skin change addon site</a></th>
 <td>skin change addon V2.0.1</td>
-<th><a href="./addon/skin/addon/skin.mcaddon" download="skin_v2.0.1.mcaddon"><input type="button" id="countButton3" value="download">:<count3></count3></a></th>
+<th><div id="release-info3" class="release-info"></div></th>
 </tr>
 
 <tr>
