--- a/Download.html
+++ b/Download.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="css/style_2.css">
 <link rel="stylesheet" type="text/css" href="css/animation_0.css"> 
 <script src="js/animation_0.js"></script>
+<script src="js/count.js"></script>
 <!--[if lt IE 9]>
 <![endif]-->
     <style>
