--- a/Download.html
+++ b/Download.html
@@ -13,7 +13,24 @@
 <script src="js/count.js"></script>
 <!--[if lt IE 9]>
 <![endif]-->
+        <style>
+        .release-info {
+            display: flex;
+            align-items: center;
+        }
+
+        .download-info {
+            margin-left: 10px;
+            display: flex;
+            align-items: center;
+        }
+
+        .download-button {
+            margin-left: 10px;
+        }
+    </style>
     <style>
+	    
   section {
     margin-top: 15px;
     margin-bottom: -15px; /* 下側の余白を20pxに設定 */
