--- a/Download.html
+++ b/Download.html
@@ -15,17 +15,20 @@
 <![endif]-->
         <style>
         .release-info {
+    text-align: center; /* テキストを中央に配置 */
             display: flex;
             align-items: center;
         }
 
         .download-info {
+    text-align: center; /* テキストを中央に配置 */
             margin-left: 10px;
             display: flex;
             align-items: center;
         }
 
         .download-button {
+    text-align: center; /* テキストを中央に配置 */
             margin-left: 10px;
         }
     </style>
