--- a/Download.html
+++ b/Download.html
@@ -13,24 +13,22 @@
 <script src="js/count.js"></script>
 <!--[if lt IE 9]>
 <![endif]-->
-        <style>
-        .release-info {
+        <style>.release-info {
     text-align: center; /* テキストを中央に配置 */
-            display: flex;
-            align-items: center;
-        }
+    display: flex;
+    align-items: center;
+}
 
-        .download-info {
-    text-align: center; /* テキストを中央に配置 */
-            margin-left: 10px;
-            display: flex;
-            align-items: center;
-        }
+.download-info {
+    margin-left: 10px; /* 左側に余白を追加 */
+    display: flex;
+    align-items: center;
+}
 
-        .download-button {
-    text-align: center; /* テキストを中央に配置 */
-            margin-left: 10px;
-        }
+.download-button {
+    margin-left: 10px; /* 左側に余白を追加 */
+}
+
     </style>
     <style>
 	    
