--- a/Download.html
+++ b/Download.html
@@ -13,20 +13,24 @@
 <script src="js/count.js"></script>
 <!--[if lt IE 9]>
 <![endif]-->
-        <style>.release-info {
-    text-align: center; /* テキストを中央に配置 */
-    display: flex;
-    align-items: center;
+        <style>
+<style>
+.release-info {
+    text-align: center;
 }
 
 .download-info {
-    margin-left: 10px; /* 左側に余白を追加 */
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 .download-button {
-    margin-left: 10px; /* 左側に余白を追加 */
+    margin-left: 10px;
+}
+
+.release-info p {
+    margin: 0; /* ボタンの下の余白を削除 */
 }
 
     </style>
