--- a/Download.html
+++ b/Download.html
@@ -167,7 +167,7 @@ li {
 <tr>
 <th><a href="./addon/scoop/pack.html" target="_blank">クリスマス:Christmas site</a></th>
 <td>クリスマス:Christmas</td>
-<th><a href="./addon/scoop/addon/プレゼント.html" target="_blank"><input type="button" id="countButton4" value="download">:<count4></count4></a></th>
+<th><a href="./addon/scoop/addon/プレゼント.html" target="_blank"><input type="button" id="countButton4" value="download"></a></th>
 </tr>
 
 <tr>
