--- a/sakusei/test.html
+++ b/sakusei/test.html
@@ -11,7 +11,7 @@
   <link rel="icon" href="favicon.ico">
   <meta charset="utf-8" />
   <meta name="Description" content="マイクラのカスタムコマンドでコマンドを簡単に実行するコマンドを簡単に生成することが出来ます!"/>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
   <font style="font-family: 'arial',sans-serif;">
 </head>
 
