--- a/sakusei/test.html
+++ b/sakusei/test.html
@@ -4,7 +4,7 @@
 
 <title>赫稲 カスタムコマンド生成サイト</title>
 
-<script src="akaina.js"></script>
+<script src="./akaina.js"></script>
 
 <head>
   <link rel="stylesheet" type="text/css" href="index.css">
