--- a/sakusei/test.html
+++ b/sakusei/test.html
@@ -44,7 +44,9 @@
 
 <span class="header_text">文章をカスタムコマンドに変換</span>
 </h2>
-<p>これは自分の名前で規制する時に使われます。 なお、自分名前に「//」を入れないようにしましょう。</p>
+<h2>画像を選択してください</h2>
+<input type="file" id="imageInput" accept="image/*">
+<p>これはアドオン名です。 なお、アドオン名に「//」を入れないようにしましょう。</p>
 <input type="text" id="name" name="name" required style="width:100%; height:20px;"><br>
 <p>文章を下に入力するか、コピペしてください。</p>
 <textarea id="honbun"  style="width:100%; height:200px;"></textarea>
