--- a/sakusei/test.html
+++ b/sakusei/test.html
@@ -48,6 +48,8 @@
 <input type="file" id="imageInput" accept="image/*">
 <p>これはアドオン名です。 なお、アドオン名に「//」を入れないようにしましょう。</p>
 <input type="text" id="name" name="name" required style="width:100%; height:20px;"><br>
+<p>これはアドオン説明です。 なお、アドオン説明に「//」を入れないようにしましょう。</p>
+<input type="text" id="name2" name="name2" required style="width:100%; height:20px;"><br>
 <p>文章を下に入力するか、コピペしてください。</p>
 <textarea id="honbun"  style="width:100%; height:200px;"></textarea>
 <input type="button" onclick="convert();" value="変換" style="width:100%; height:30px;">
