--- a/sakusei/test.html
+++ b/sakusei/test.html
@@ -47,9 +47,9 @@
 <h2>画像を選択してください</h2>
 <input type="file" id="imageInput" accept="image/*">
 <p>これはアドオン名です。 なお、アドオン名に「//」を入れないようにしましょう。</p>
-<input type="text" id="name" name="name" required style="width:100%; height:20px;"><br>
+<input type="text" id="name" name="name" required style="width:100%; height:40px;"><br>
 <p>これはアドオン説明です。 なお、アドオン説明に「//」を入れないようにしましょう。</p>
-<input type="text" id="name2" name="name2" required style="width:100%; height:20px;"><br>
+<input type="text" id="name2" name="name2" required style="width:100%; height:40px;"><br>
 <p>文章を下に入力するか、コピペしてください。</p>
 <textarea id="honbun"  style="width:100%; height:200px;"></textarea>
 <input type="button" onclick="convert();" value="変換" style="width:100%; height:30px;">
@@ -95,15 +95,12 @@ no>test_0
 2023/07/11 - サイトの説明文とコマンドを変更<br>
 2023/07/12 - ファイルを最新版へ(1.20.10)変更<br>
 2023/08/13 - <no>禁止</no>文字を追加<br>
+2024/05/02 - 簡単に作れるように変更<br>
 
   <p>赫稲サイトへようこそ！</p>
   <p>Welcome to the akaina site!</p>
   <li>
-  <img src="./images/app_icon.png" alt="" width="40"><a href="
-      https://akaina0808.netlify.app/">ホームページ
-[HOME]</a></li>
-  <li>
-  <img src="images/custom_icon.png" alt="" width="40"><a href="https://www.mediafire.com/file/f1uy94ed301y5k6/カスタムコマンド入れるファイル.zip/file">カスタムコマンドを入れるファイル(file📂)</a></li>
+  <img src="./images/app_icon.png" alt="" width="40"><a href="https://akaina0809.github.io/dsito/">ホームページ[HOME]</a></li>
 
 </body>
 </html>
