--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('minecraft_ban_screen.jpg');
+            background-image: url('images/404.png');
             background-size: cover;
             margin: 0;
             padding: 0;
