--- a/404.html
+++ b/404.html
@@ -9,9 +9,12 @@
             font-family: "Mojangles";
             src: url("./Font/Mojangles.ttf") format("truetype");
         }
+* {
+    font-weight: bold;
+    font-family: 'Mojangles', sans-serif; /* 全体のテキストに手書きフォントを適用 */
+}
 
         body {
-            font-family: "Mojangles", Arial, sans-serif; /* Mojangles.ttfフォントを適用 */
             background-image: url('images/404.png');
             background-size: cover;
             margin: 0;
