--- a/404.html
+++ b/404.html
@@ -12,10 +12,10 @@
 * {
     font-weight: bold;
     font-family: 'Mojangles', sans-serif; /* 全体のテキストに手書きフォントを適用 */
+    	background-image: url(images/404.png); /* 背景画像 */
 }
 
         body {
-            background-image: url('images/404.png');
             background-size: cover;
             margin: 0;
             padding: 0;
