--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 }
 
         body {
-    	background-image: url(maikura404.png); /* 背景画像 */
+            background-image: url('maikura404.png');  /* 背景画像 */
             background-size: cover;
             margin: 0;
             padding: 0;
