--- a/404.html
+++ b/404.html
@@ -1,8 +1,16 @@
+
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>404 - ページが見つかりません</title>
+</head>
+<body>
+    <div class="container">
+        <h1>404 - ページが見つかりません</h1>
+        <p>申し訳ありませんが、お探しのページは見つかりませんでした。</p>
+        <a href="/">ホームページに戻る</a>
+    </div>
+</body>
     <style>
         @font-face {
             font-family: "Mojangles";
@@ -12,11 +20,11 @@
     font-weight: bold;
     font-family: 'Mojangles', sans-serif; /* 全体のテキストに手書きフォントを適用 */
     text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000; /* 黒い枠線を追加 */
-     background-image: url('maikura404.png');  /* 背景画像 */
 
 }
 
         body {
+    	background-image: url(./maikura404.png); /* 背景画像 */
             background-size: cover;
             margin: 0;
             padding: 0;
@@ -49,12 +57,4 @@
             text-decoration: underline;
         }
     </style>
-</head>
-<body>
-    <div class="container">
-        <h1>404 - ページが見つかりません</h1>
-        <p>申し訳ありませんが、お探しのページは見つかりませんでした。</p>
-        <a href="/">ホームページに戻る</a>
-    </div>
-</body>
 </html>
