--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 }
 
         body {
-           background-image: url('error/maikura404.png'); /* 背景画像 */
+           background-image: url('error/maikura404.jpg'); /* 背景画像 */
             background-size: cover;
             margin: 0;
             padding: 0;
