--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <style>
         @font-face {
             font-family: "Mojangles";
-            src: url("error/PixelMplus12-Regular.ttf") format("truetype");
+            src: url("../error/PixelMplus12-Regular.ttf") format("truetype");
         }
 * {
     font-weight: bold;
@@ -24,7 +24,7 @@
 }
 
         body {
-           background-image: url('error/maikura404.jpg'); /* 背景画像 */
+           background-image: url('../error/maikura404.jpg'); /* 背景画像 */
             background-size: cover;
             margin: 0;
             padding: 0;
