--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <div class="container">
         <h1>404 - ページが見つかりません</h1>
         <p>申し訳ありませんが、お探しのページは見つかりませんでした。</p>
-        <a href="/">ホームページに戻る</a>
+        <a href="https://akaina0809.github.io/dsito/">ホームページに戻る</a>
     </div>
 </body>
     <style>
