--- a/404.html
+++ b/404.html
@@ -8,12 +8,12 @@
     <div class="container">
         <h1>404 - ページが見つかりません</h1>
        <p>申し訳ありませんが、お探しのページは見つかりませんでした。</p>
-       <a href="https://akaina0809.github.io/dsito/">ホームページに戻る</a>
+       <a href="https://akaina0809.github.io/">ホームページに戻る</a>
     </div>
     <div class="container">
     <h1>404 - Page Not Found</h1>
 <p>We're sorry, but the page you're looking for could not be found.</p>
-<a href="https://akaina0809.github.io/dsito/">Return to Homepage</a>
+<a href="https://akaina0809.github.io/">Return to Homepage</a>
     </div>
 </body>
     <style>
