--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
           リダイレクト先URL = 'https://example.com/en'; // 英語のページURL
           break;
         case 'ja':
-          リダイレクト先URL = 'https://example.com/ja'; // 日本語のページURL
+          リダイレクト先URL = 'https://akaina0809.github.io/index2.html'; // 日本語のページURL
           break;
         default:
-          リダイレクト先URL = 'https://akaina0809.github.io/'; // デフォルトは日本語
+          リダイレクト先URL = 'https://akaina0809.github.io/index2.html'; // デフォルトは日本語
       }
 
       // リダイレクト
