--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </style>
 </head>
 <body>
-  <h1>言語を選択してください</h1>
+  <h1>言語を選択してください:Select your language</h1>
   <select id="langSelect">
-    <option value="en">English</option>
     <option value="ja">日本語</option>
+    <option value="en">English</option>
     <!-- 他の言語を追加する場合はここにオプションを追加 -->
   </select>
   <button onclick="設定を保存()">選択する</button>
