--- a/sorry.html
+++ b/sorry.html
@@ -1,1 +1,61 @@
 
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>The English version of the site is under preparation.</title>
+</head>
+<body>
+    <div class="container">
+    <h1>The English version of the site is under preparation.</h1>
+<p>Sorry, the English version is in preparation.</p>
+<p>The English version is scheduled to be completed in 2025.</p>
+<a href="https://akaina0809.github.io/">Japanese version site.</a>
+    </div>
+</body>
+    <style>
+        @font-face {
+            font-family: "Mojangles";
+            src: url("../error/PixelMplus12-Regular.ttf") format("truetype");
+        }
+* {
+    font-weight: bold;
+    font-family: 'Mojangles', sans-serif; /* 全体のテキストに手書きフォントを適用 */
+    text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000; /* 黒い枠線を追加 */
+
+}
+
+        body {
+           background-image: url('../error/maikura404.jpg'); /* 背景画像 */
+            background-size: cover;
+            margin: 0;
+            padding: 0;
+            color: #ffffff; /* テキストの色を白に設定 */
+        }
+
+        .container {
+            width: 80%;
+            margin: auto;
+            text-align: center;
+            padding-top: 100px;
+        }
+
+        h1 {
+            font-size: 72px;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 24px;
+            margin-bottom: 40px;
+        }
+
+        a {
+            color: #0078d4;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</html>
