--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
       switch (言語コード) {
         case 'en':
-          リダイレクト先URL = 'https://example.com/en'; // 英語のページURL
+          リダイレクト先URL = './sorry.html'; // 英語のページURL
           break;
         case 'ja':
           リダイレクト先URL = 'https://akaina0809.github.io/index2.html'; // 日本語のページURL
