--- a/sorry.html
+++ b/sorry.html
@@ -25,7 +25,7 @@
 }
 
         body {
-           background-image: url('../error/maikura404.jpg'); /* 背景画像 */
+           background-image: url('../error/sorry.jpg'); /* 背景画像 */
             background-size: cover;
             margin: 0;
             padding: 0;
