--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 		<ul id="topnav">
 			<li class="active"><a href="index.html">トップページ<br><span>Top</span></a></li>
 			<li><a href="akaina.html">ごあいさつ<br><span>Greeting</span></a></li>
-			<li><a href="Download.html">ダウンロード<br><span>Download</span></a></li>
+			<li><a href="dl/Download.html">ダウンロード<br><span>Download</span></a></li>
 			<li><a href="sns.html">SNS<br><span>SNS</span></a></li>
 			<li><a href="osirase.html">お知らせ<br><span>Notice</span></a></li>			
-			<li><a href="./Link.html">マイクラ系<br><span>Microsoft</span></a></li>
+			<li><a href="./mi.html">マイクラ系<br><span>Microsoft</span></a></li>
 			<li><a href="./Link.html">リンク集<br><span>Link Collection</span></a></li>
 			<li><a href="Sanka.html">参加者<br><span>Participant</span></a></li>
 			<li><a href="subpage.html">利用規約<br><span>Terms of service</span></a></li>
