--- a/addon/scoop/english/index_5.html
+++ b/addon/scoop/english/index_5.html
@@ -25,11 +25,11 @@
 
 <header>
 <div id="header_block">
-<div id="site_title"><a href="https://akaina0809.github.io/dsito/Download.html">Christmas gift (English)</a></div>
+<div id="site_title"><a href="https://akaina0809.github.io/dl/Download.html">Christmas gift (English)</a></div>
 <div id="main_menu">
 <nav>
 <ul>
-<li><a href="https://akaina0809.github.io/dsito/Download.html">Home</a></li> 
+<li><a href="https://akaina0809.github.io/dl/Download.html">Home</a></li> 
 <li><a href="index_3.html">Author</a></li>
 <li><a href="index_4.html">Terms of Use</a></li>
 <li><a href="../pack.html">日本語</a></li>
