--- a/addon/skin/skin.html
+++ b/addon/skin/skin.html
@@ -27,11 +27,11 @@
 
 <header>
 <div id="header_block">
-<div id="site_title"><a href="https://akaina0809.github.io/dsito/Download.html">スキン変更アドオン(日本語)</a></div>
+<div id="site_title"><a href="https://akaina0809.github.io/dl/Download.html">スキン変更アドオン(日本語)</a></div>
 <div id="main_menu">
 <nav>
 <ul>
- <li><a href="https://akaina0809.github.io/dsito/Download.html">ホーム</a></li>
+ <li><a href="https://akaina0809.github.io/dl/Download.html">ホーム</a></li>
  <li><a href="日本語/index_2.html">レシピ</a></li>
  <li><a href="日本語/index_3.html">作成者</a></li>
  <li><a href="日本語/index_4.html">利用規約</a></li>
