--- a/addon/skin/english/index_2.html
+++ b/addon/skin/english/index_2.html
@@ -23,11 +23,11 @@
 
 <header>
 <div id="header_block">
-<div id="site_title"><a href="https://akaina0809.github.io/dsito/Download.html">Skin change addon (English)</a></div>
+<div id="site_title"><a href="https://akaina0809.github.io/dl/Download.html">Skin change addon (English)</a></div>
 <div id="main_menu">
 <nav>
 <ul>
-<li><a href="https://akaina0809.github.io/dsito/Download.html">Home</a></li> 
+<li><a href="https://akaina0809.github.io/dl/Download.html">Home</a></li> 
 <li><a href="index_2.html">Recipes</a></li> 
 <li><a href="index_3.html">Author</a></li>
 <li><a href="index_4.html">Terms of Use</a></li>
