--- a/addon/skin/english/index_4.html
+++ b/addon/skin/english/index_4.html
@@ -25,7 +25,7 @@
 
 <header>
 <div id="header_block">
-<div id="site_title"><a href="https://akaina0809.github.io/dsito/Download.html">Skin change addon (English)</a></div>
+<div id="site_title"><a href="https://akaina0809.github.io/dl/Download.html">Skin change addon (English)</a></div>
 <div id="main_menu">
 <nav>
 <ul>
