--- a/addon/touhou/Komeiji_Koishi.html
+++ b/addon/touhou/Komeiji_Koishi.html
@@ -17,7 +17,7 @@
 			<p id="menuWrap"><a id="menu"><span id="menuBtn"></span></a></p>
 			<div class="panel">
 				<ul>
-					<li><a href="https://akaina0809.github.io/dsito/Download.html">HOME</a></li>
+					<li><a href="https://akaina0809.github.io/dl/Download.html">HOME</a></li>
 					<li><a href="#top">TOP</a></li>
 					<li><a href="#sec01">GUI</a></li>
 					<li><a href="#sec02">使い方:Used</a></li>
@@ -85,10 +85,6 @@
 		<p>Solved the issue where the GUI size of the old trading screen was different.</p>
 	</div>
 </section>
-
-<footer id="footer">
-	Copyright(c) 2016 Sample Inc. All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank">http://f-tpl.com</a><!-- ←クレジット表記を外す場合はシリアルキーが必要です http://f-tpl.com/credit/ -->
-</footer>
 
 </body>
 </html>
