--- a/dl/Download.html
+++ b/dl/Download.html
@@ -229,7 +229,7 @@ li {
 </style>
 </head>
 <script type="text/javascript" src="./z_addon_list.js"></script>
-<script src=../"js/count.js"></script>
+<script src="../js/count.js"></script>
 <body>
   <div class="main">
     <body>
