--- a/dl/Download.html
+++ b/dl/Download.html
@@ -225,6 +225,7 @@ li {
 </style>
 </head>
 <script type="text/javascript" src="./z_addon_list.js"></script>
+<script type="text/javascript" src="../js/count.js"></script>
 <body>
   <div class="main">
     <body>
@@ -238,13 +239,13 @@ li {
 
       <p style="text-align: right;">
         並べ替え: 
-        <select id="narabekae" onchange="yomikomi()">
+        <select id="narabekae" onchange="akaina(()">
           <option id="aiueo">あいうえお順</option>
           <option id="atarasii">新しい順</option>
           <option id="hurui">古い順</option>
         </select>
         　絞り込む: 
-        <select id="siborikomi" onchange="yomikomi()">
+        <select id="siborikomi" onchange="akaina(()">
           <option id="defalut">全部</option>
           <option id="リソースパック">リソースパック</option>
           <option id="ビヘイビアーパック">ビヘイビアーパック</option>
