--- a/dl/Download.html
+++ b/dl/Download.html
@@ -239,13 +239,13 @@ li {
 
       <p style="text-align: right;">
         並べ替え: 
-        <select id="narabekae" onchange="akaina(()">
+        <select id="narabekae" onchange="yomikomi()">
           <option id="aiueo">あいうえお順</option>
           <option id="atarasii">新しい順</option>
           <option id="hurui">古い順</option>
         </select>
         　絞り込む: 
-        <select id="siborikomi" onchange="akaina(()">
+        <select id="siborikomi" onchange="yomikomi()">
           <option id="defalut">全部</option>
           <option id="リソースパック">リソースパック</option>
           <option id="ビヘイビアーパック">ビヘイビアーパック</option>
@@ -260,7 +260,7 @@ li {
 
 <script type="text/javascript">
 
-  function akaina() {
+  function yomikomi() {
     while (addon_list_div.firstChild) {
       addon_list_div.removeChild(addon_list_div.firstChild)
     }
@@ -280,10 +280,10 @@ li {
       pack_flame.classList.add("pack_flame")
       addon_list_div.appendChild(pack_flame)
       
-      pack_flame.innerHTML = `<img src="${obj.icon_url}" witdh=80 height=80><div class="text_content"><span class="pack_name"><a href="${obj.link}">${obj.name}</a></span><br>${obj.description}<br>${obj.type.includes("リソースパック") ? `<span class="risopa">リソースパック</span>` : ``}${obj.type.includes("ビヘイビアーパック") ? `<span class="bihepa">ビヘイビアーパック</span>` : ``}<br><div id="${obj.id}" class="release-info"></div></div>`
+      pack_flame.innerHTML = `<img src="${obj.icon_url}" witdh=80 height=80><div class="text_content"><span class="pack_name"><a href="${obj.link}">${obj.name}</a></span><br>${obj.description}<br>${obj.type.includes("リソースパック") ? `<span class="risopa">リソースパック</span>` : ``}${obj.type.includes("ビヘイビアーパック") ? `<span class="bihepa">ビヘイビアーパック</span>` : ``}</div>`
     }
   }
-  akaina()
+  yomikomi()
 </script>
 </body>
 <!--/container-->
