--- a/addon/skin/日本語/index_2.html
+++ b/addon/skin/日本語/index_2.html
@@ -49,7 +49,7 @@
 
 <article>
 
-<d><a href="addon/skin.mcaddon" download="skin.mcaddon"><button class="button-062">Download</button></a> </d>
+<d><a href="https://github.com/akaina0809/akaina0809.github.io/releases/tag/skin_addon"><button class="button-062">Download</button></a> </d>
 
 
 <div class="block">
