--- a/mi.html
+++ b/mi.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
   <title>minecraft系</title>
-  <link rel="stylesheet" type="text/css" href=".mi//style.css">
+  <link rel="stylesheet" type="text/css" href="./mi/style.css">
   <!-- ブラウザ用ファビコン -->
   <link rel="icon" href="https://avatars.githubusercontent.com/u/131579504?v=2" type="image/png">
   <!-- iOS / iPhone ホーム画面用 -->
@@ -19,13 +19,13 @@
     <div class="maincontent">
       <h2>minecraft</h2>
       <h3>Molang</h3>
-      <a class="anda-kesu" href="./newyear.html">
+      <a class="anda-kesu" href="./Molang_Query_Functions.html">
         <div class="indexlink">
-          新年までのカウントダウン
+          Molang一覧(検索機能付き)
         </div>
       </a>
-      <h3>便利ツール</h3>
-      <h3>その他</h3>
+      <h3>resource</h3>
+      <h3>behavior</h3>
       <hr>
     </div>
   </div>
