--- a/Molang_Query_Functions.html
+++ b/Molang_Query_Functions.html
@@ -2,14 +2,13 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Molang Query Functions</title>
   <!-- ブラウザ用ファビコン -->
   <link rel="icon" href="https://avatars.githubusercontent.com/u/131579504?v=2" type="image/png">
 
   <!-- iOS / iPhone ホーム画面用 -->
   <link rel="apple-touch-icon" sizes="180x180" href="https://avatars.githubusercontent.com/u/131579504?v=2">
-
+   <meta name="viewport" content="width=1024, initial-scale=1">
   <style>
       @font-face {
       font-family: 'KTEGAKI';
@@ -20,6 +19,8 @@
           line-height: 1.6;
           margin: 20px;
           background-color: #f0f8ff; /* 明るい背景色 */
+          max-width: 1024px; /* PCと同じ幅 */
+          margin: 0 auto;     /* 中央寄せ */
       }
       h1 {
           font-family: 'KTEGAKI', cursive;
