--- a/Molang_Query_Functions.html
+++ b/Molang_Query_Functions.html
@@ -165,9 +165,13 @@ td {
 
 </head>
 <body>
-<a href="./index.html" class="home-btn">
-  <img src="https://i.pinimg.com/originals/84/53/6e/84536ea88ad82992afb6e879bd7616c2.gif" alt="ホームに戻る" />
-</a>
+<a href="./index.html" class="home-btn" style="
+    display:inline-block;
+    width:50px;
+    height:50px;
+    background-image:url('https://i.pinimg.com/originals/84/53/6e/84536ea88ad82992afb6e879bd7616c2.gif');
+    background-size:cover;
+"></a>
 
 <h1>Molang Query Functions</h1>
 <p class="search-container">日付: 2025年8月13日</p>
