--- a/Molang_Query_Functions.html
+++ b/Molang_Query_Functions.html
@@ -13,7 +13,7 @@
   <style>
       @font-face {
       font-family: 'KTEGAKI';
-      src: url('./KTEGAKI.ttf') format('truetype');
+      src: url('./mi/KTEGAKI.ttf') format('truetype');
     }
       body {
           font-family: 'KTEGAKI', cursive; /* kawaii手書きフォント */
