--- a/Download.html
+++ b/Download.html
@@ -171,10 +171,11 @@ li {
 </tr>
 
 <tr>
-<th>no</th>
-<td></td>
-<th></th>
+<th><a href="./addon/Probability_Drop/Drop.html" target="_blank">Probability.Drop.Addon</a></th>
+<td>Probability.Drop.Addon.mcaddon</td>
+<th><div id="release-info４" class="release-info"></div></th>
 </tr>
+	
 <tr>
 <th>no</th>
 <td>NO_file</td>
